<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/shopImageProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp" />

            <ImageView
                android:id="@+id/shopImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:visibility="gone" 
                android:contentDescription="@string/img_description_defaut"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/catchCopy2"
                style="@style/ShopCategory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/catchCopy2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/shopName"
                style="@style/ShopName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/shopName"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_Distance"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/shopDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/shopEmpty"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_walk"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/shopTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/shopEmpty"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/shopOpenHour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/shopOpenHour"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shopCoupon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/shopCoupon"
                android:textColor="#ff0000"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>